# pyinv

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
pyinv/: manage.py
pyinv/accounts/: dynamic_preferences_registry.py  middleware.py  urls.py  views.py
pyinv/inventory/: admin.py  asset_code.py  models.py  urls.py  views.py
pyinv/inventory/migrations/: 0001_initial.py  0003_better-asset-models.py  0007_allow_null_asset_location.py
pyinv/inventory/views/: __init__.py  asset.py  consumable.py  consumable_model.py  manufacturer.py  misc.py  model.py
pyinv/oobe/: forms.py  middleware.py  urls.py  views.py
pyinv/pyinv/: .gitignore  settings.py  urls.py  wsgi.py
pyinv/templates/: 403.html  404.html  base.html
pyinv/templates/accounts/: profile.html  signup.html
pyinv/templates/inventory/: asset_create.html  asset_delete.html  asset_edit.html  asset_search.html  asset_view.html  consumable_create.html  consumable_edit.html  consumablemodel_create.html  consumablemodel_delete.html  consumablemodel_edit.html  consumablemodel_view.html  manufacturer_create.html  manufacturer_delete.html  manufacturer_edit.html  manufacturer_view.html  model_create.html  model_delete.html  model_edit.html  model_view.html  search.html
srohub/: manage.py
srohub/access_codes/: admin.py  models.py
srohub/accounts/: middleware.py  urls.py  views.py
srohub/dashboard/: views.py
srohub/inventory/: admin.py  asset_code.py  models.py  urls.py  views.py
srohub/srohub/: settings.py  urls.py  wsgi.py
srohub/templates/: base.html  base_float.html
(+62 files in other folders)
