[tool.poetry]
name = "srohub"
version = "0.1.0"
description = ""
authors = ["Dan Trickey <dan@trickey.io>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.2"
django-crispy-forms = "^1.7"
pyotp = "^2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
