[tool.poetry]
name = "srohub"
version = "0.1.0"
description = ""
authors = ["Dan Trickey <dan@trickey.io>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0"
django-crispy-forms = "^1.9"
damm32 = "^1.1.0"
django-simple-history = "^2.8.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
