[tool.poetry]
name = "srohub"
version = "0.1.0"
description = ""
authors = ["Dan Trickey <dan@trickey.io>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0"
django-crispy-forms = "^1.9"
damm32 = "^1.1.0"
django-simple-history = "^2.8.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
flake8-comprehensions = "^3.2.2"
flake8-debugger = "^3.2.1"
flake8-isort = "^2.8.0"
flake8-mutable = "^1.2.0"
flake8-todo = "^0.7"
flake8-bugbear = "^20.1.4"
flake8-builtins = "^1.4.2"
isort = {version = "^4.3.21", extras = ["pyproject"]}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
